added aws s3 settings

--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -5,10 +5,9 @@
 <div class="container">
     <h2 class="text-center mt-3">{{product.title}}</h2>
     <hr>
-    <div class="continer-fluid mt-3 text-center">
-        <img  class = "border border-dark "style="
-                height: 400px;
-                width: 600px;" src="{{product.image.url}}" alt="">
+    <div class=" container  mt-3 text-center">
+        <img  class = "img fluid w-75 h-50  border border-dark "style="
+                " src="{{product.image.url}}" alt="">
         <h5 class="text-center mt-3 ">{{product.description}}</h5>
     </div>
 </div>  
